--- a/public/posts/final-desktop-app-coding-key-points.mdx
+++ b/public/posts/final-desktop-app-coding-key-points.mdx
@@ -7,7 +7,7 @@ Previously I summarised the behavior of the <Link href='/posts/final-desktop-sam
 The app has the same code layout as the initial desktop code sample, to represent the Electron main and renderer process, along with some shared code:
 
 <span className='smallimage'>
-  ![code layout](../images/450/code-layout.jpg)
+  <img src='../images/450/code-layout.jpg' alt='code layout' />
 </span>
 
 ### React Update
